refactoring of game API to use Java records
- introduction of `io.soabase.record-builder:record-builder-processor` for generating record builders